[tool.poetry]
name = "lctetl"
version = "0.1.0"
description = "LCTETL is a Linux crontab task to execute ETL(extract, transform, load) with python-scripts"
authors = ["hong <yunghunghuang984@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
